# AIDailyJournal

./: .gitignore  PRD.md  README.md  index.html  package.json  pnpm-lock.yaml
src/: App.tsx  constants.ts  globals.css
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_init.sql
src-tauri/src/: lib.rs  main.rs
src/components/: ErrorBoundary.tsx
src/components/dashboard/: DashboardScreen.tsx
src/components/history/: EntryDetail.tsx  HistoryItem.tsx  HistoryList.tsx
src/components/journal/: InputBar.tsx  JournalScreen.tsx  MessageBubble.tsx
src/components/layout/: MainPanel.tsx  Sidebar.tsx  index.ts
src/components/review/: EmotionChart.tsx  ReviewCard.tsx  ReviewScreen.tsx
src/components/settings/: SettingsScreen.tsx
src/components/setup/: SetupScreen.tsx
src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  Input.tsx  Spinner.tsx  Textarea.tsx  Toast.tsx  index.ts
src/hooks/: useChat.ts  useDashboard.ts  useEntries.ts  useMemories.ts  useSettings.ts
src/lib/: memory.ts  openai.ts  prompts.ts  storage.ts  tokens.ts  types.ts
