[package]
name = "daily-ledger"
version = "0.0.1"
description = "The Daily Ledger - A native macOS journaling app"
authors = []
edition = "2021"

[lib]
name = "daily_ledger_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "daily-ledger"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
security-framework-sys = "2"
core-foundation-sys = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
